# nats-bursting

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  controller-image.yml  paper-pdf.yml  release.yml  worker-image.yml
benchmarks/: README.md  bench_cluster.py  bench_compression.py  bench_transport.py  coldstart_n20.json  results_batchprobe.json  results_cluster_pool.json  results_compression.json  results_compression_real.json  results_transport_realhop.json  warmpool_scale.json
benchmarks/infocom/: ADAPTIVE_CURVE_FINDINGS.md  E8_PREREG.md  E8_PROTOCOL.md  E9_PREREG.md  README.md  RESULTS.md  RESULTS_E1E2.md  RESULTS_E8.md  RESULTS_E9.md  RESULTS_FRAMEWORKS.md  aggregate.py  atlas_run.py  baselines.py  bench_embed_scaling.py  bench_frameworks.py  bench_nats_pool.py  contention.py  cpu_thermal_demo.py  e8_local.py  e9_adaptive_curve.py  e9_analyze.py  e9_campaign.py  e9_contended.py  e9_summary.json  harness.py  launch_adaptive.sh  monitor.py  multiseed.py  pull_e9.py  responder.py  run.py  run_gonats.sh  suspend_atlas_ai.sh  sync_atlas.py  tau_sweep.py  test_adaptive_parity.py
benchmarks/infocom/e9_results/: adaptive_markov_42_p0.01.json  adaptive_markov_42_p0.03.json  adaptive_markov_42_p0.08.json  adaptive_markov_42_p0.15.json  adaptive_markov_42_p0.4.json  adaptive_markov_43_p0.01.json  adaptive_markov_43_p0.03.json  adaptive_markov_43_p0.08.json  adaptive_markov_43_p0.15.json  adaptive_markov_43_p0.4.json  adaptive_poisson_42.json  adaptive_poisson_43.json  adaptive_poisson_44.json  adaptive_poisson_45.json  adaptive_square_42.json  adaptive_square_43.json  adaptive_square_44.json  adaptive_square_45.json  aimd_markov_42_p0.01.json  aimd_markov_42_p0.03.json  aimd_markov_42_p0.08.json  aimd_markov_42_p0.15.json  aimd_markov_42_p0.4.json  aimd_markov_43_p0.01.json  aimd_markov_43_p0.03.json  aimd_markov_43_p0.08.json  aimd_markov_43_p0.15.json  aimd_markov_43_p0.4.json  aimd_poisson_42.json  aimd_poisson_43.json  aimd_poisson_44.json  aimd_poisson_45.json  aimd_square_42.json  aimd_square_42_thermal.json  aimd_square_43.json  aimd_square_43_thermal.json  aimd_square_44.json  aimd_square_45.json  cpu_thermal.json  naive_poisson_42.json  (+26 more)
benchmarks/infocom/fw_results/: fw_dask.json  fw_nats_bursting.json  fw_processpool.json  fw_ray.json
benchmarks/infocom/gonats_results/: gonats_embed_w1.json  gonats_embed_w2.json  gonats_embed_w4.json  gonats_embed_w8.json  gonats_tiny_w1.json  gonats_tiny_w2.json  gonats_tiny_w4.json  gonats_tiny_w8.json
benchmarks/infocom/natsbench/: go.mod  main.go
benchmarks/infocom/scale_results/: scale_w1.json  scale_w2.json  scale_w4.json  scale_w6.json  scale_w8.json
cmd/atlas-burst/: main.go
cmd/nats-bursting/: main.go
deploy/atlas/: config.yaml  nats-leafnode.conf
deploy/kubernetes/nrp/: controller-config.yaml  controller-deployment.yaml  kustomization.yaml  nats-leaf-configmap.yaml  nats-leaf-deployment.yaml  nats-leaf-secret.yaml  nats-leaf-service.yaml  nrp-telemetry-deployment.yaml  nrp-telemetry.py  rbac.yaml
deploy/kubernetes/nrp/fleet-coordinator/: README.md  coordinator-job.yaml  coordinator.py  rbac.yaml
deploy/systemd/: atlas-burst.service  nats-bursting.service
deploy/worker/: Dockerfile  gpu_worker.py
docs/: design.md  nats-leafnode-duckdns.md  pools.md  tailscale-funnel.md
docs/articles/: linkedin.md  persistent-pools-over-nats.md  reddit.md
internal/backoff/: backoff.go  backoff_test.go
internal/config/: config.go
internal/decider/: decider.go  decider_test.go
internal/natsbridge/: natsbridge.go  natsbridge_test.go
internal/prober/: prober.go  prober_test.go
internal/submitter/: submitter.go  submitter_test.go
paper/: SUBMISSION_INFOCOM.md  crossdomain_predictive.tex  infocom.bib  infocom.tex  infocom_aoi_model.tex  infocom_appendix.tex  infocom_eval.tex  infocom_model.tex  infocom_outline.md  outline.md  paper.aux  paper.bbl  paper.bib  paper.blg  paper.fdb_latexmk  paper.fls  paper.md  paper.tex  paper_sc26_revised.tex
paper/figures/: make_figures.py  make_infocom_figs.py
paper/predictive_value/: NOTES.md  battery_v3.json  battery_v3.py  battery_v4.json  battery_v4.py  battery_v5.json  battery_v5.py  battery_v5b.json  battery_v5b.py  battery_v5c.json  battery_v5c.py  main.aux  main.out  main.tex  make_figures.py
paper/predictive_value/submission/: SUBMISSION.md  sigmetrics.aux  sigmetrics.out  sigmetrics.tex
python/: README.md  pyproject.toml
python/atlas_burst/: __init__.py  client.py  magic.py
python/nats_bursting/: __init__.py  client.py  descriptor.py  magic.py  pool.py  probe.py  worker.py  worker_entry.py
python/tests/: test_client.py  test_descriptor.py  test_magic.py  test_pool.py  test_probe.py
