[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nats-bursting"
version = "0.2.0"
description = "Cloud bursting for AI workloads over a NATS bus — ephemeral Jobs + persistent worker pools + IPython %%burst magic"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrew H. Bond", email = "andrew.bond@sjsu.edu" }]
requires-python = ">=3.10"
keywords = [
    "nats", "kubernetes", "cloud-bursting", "ai", "ml", "hpc",
    "jupyter", "ipython", "distributed-computing", "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Framework :: IPython",
    "Framework :: Jupyter",
]
dependencies = [
    "nats-py>=2.6.0",
]

[project.optional-dependencies]
ipython = ["ipython>=8.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ahb-sjsu/nats-bursting"
Documentation = "https://github.com/ahb-sjsu/nats-bursting#readme"
Repository = "https://github.com/ahb-sjsu/nats-bursting"
Issues = "https://github.com/ahb-sjsu/nats-bursting/issues"
Changelog = "https://github.com/ahb-sjsu/nats-bursting/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["nats_bursting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
branch = true
source = ["nats_bursting"]
# The async NATS runtime modules need an integration harness (live NATS
# server + JetStream) to exercise. Unit tests can only cover their data
# surfaces. Omit until integration tests exist — runtime coverage for
# these is better measured by the live worker pools on NRP.
omit = [
    "nats_bursting/worker.py",
    "nats_bursting/worker_entry.py",
]

[tool.coverage.report]
show_missing = true
# Alpha target; raise as async NATS transport gets integration tests.
fail_under = 70

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length handled by black
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
